[package]
name = "blind-ovote"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec-blind-signatures = { git = "https://github.com/aragonzkresearch/ark-ec-blind-signatures" }
# ark-ec-blind-signatures = { path = "../ark-ec-blind-signatures" }

ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-bn254 = { version = "^0.3.0" }
ark-ed-on-bn254 = { version = "^0.3.0", default-features = true, features = [ "r1cs" ] }
ark-crypto-primitives = { version = "^0.3.0", default-features = true, features = [ "r1cs" ] }
arkworks-utils = { git = "https://github.com/aragonzkresearch/arkworks-gadgets", name="arkworks-utils", features=["poseidon_bn254_x5_5"] }
arkworks-native-gadgets = { git = "https://github.com/aragonzkresearch/arkworks-gadgets", name="arkworks-native-gadgets"}
arkworks-r1cs-gadgets = { git = "https://github.com/aragonzkresearch/arkworks-gadgets", name="arkworks-r1cs-gadgets"}
ark-relations = { version = "^0.3.0", default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0" }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }
derivative = { version = "2.0", features = ["use_core"] }

ethers = "1.0.0"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
